--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
 		"react-dom": "^18.2.0",
 		"react-image-webp": "^0.8.0",
 		"react-scroll": "^1.9.0",
+		"rellax": "^1.12.1",
 		"require-dir": "^1.2.0",
 		"sass": "^1.72.0",
 		"sass-loader": "^14.1.1",
@@ -116,7 +117,6 @@
 		"del": "^6.1.1",
 		"gsap": "^3.12.5",
 		"gulp-cli": "^2.3.0",
-		"postcss": "^8.4.35",
-		"rellax": "^1.12.1"
+		"postcss": "^8.4.35"
 	}
 }
