--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
 		"PRODUCTION": "gulp --production",
 		"DEL (Build)": "gulp clear",
 		"PUG": "gulp pug",
-		"HTML": "gulp html",
 		"REACT": "gulp react",
 		"JSON": "gulp json",
 		"SCSS": "gulp scss",
@@ -16,7 +15,6 @@
 		"FONT-Style": "gulp fontsStyle",
 		"IMAGE": "gulp image",
 		"SPRITE": "gulp sprite",
-		"SVG": "gulp svg",
 		"FONT": "gulp fonts",
 		"CLEAR - (Fonts)": "gulp clearFonts",
 		"(3) TASKS": "gulp --tasks"
@@ -30,18 +28,17 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/core": "^7.23.2",
-		"@babel/preset-env": "^7.23.2",
+		"@babel/core": "^7.24.5",
+		"@babel/preset-env": "^7.24.5",
 		"@babel/preset-react": "^7.24.1",
-		"@babel/register": "^7.18.9",
-		"@sentry/react": "^7.109.0",
-		"@sentry/tracing": "^7.109.0",
+		"@babel/register": "^7.23.7",
+		"@sentry/react": "^7.113.0",
+		"@sentry/tracing": "^7.113.0",
 		"@types/jest": "^29.5.12",
-		"@types/scrollmagic": "^2.0.8",
-		"axios": "^1.6.8",
 		"babel-loader": "^9.1.3",
-		"browser-sync": "^2.27.10",
-		"css-loader": "^6.10.0",
+		"babel-preset-react-app": "^10.0.1",
+		"browser-sync": "^3.0.2",
+		"css-loader": "^7.1.1",
 		"eslint-config-prettier": "^9.1.0",
 		"file-loader": "^6.2.0",
 		"gulp": "^4.0.2",
@@ -72,7 +69,6 @@
 		"gulp-rename": "^2.0.0",
 		"gulp-replace": "^1.1.4",
 		"gulp-sass": "^5.1.0",
-		"gulp-sass-glob": "^1.1.0",
 		"gulp-shorthand": "^1.1.0",
 		"gulp-size": "^4.0.1",
 		"gulp-sourcemaps": "^3.0.0",
@@ -82,41 +78,32 @@
 		"gulp-svgmin": "^4.1.0",
 		"gulp-svgstore": "^9.0.0",
 		"gulp-ttf2woff2": "^4.0.1",
-		"gulp-uglify": "^3.0.2",
 		"gulp-webp": "^4.0.1",
 		"gulp-webp-css": "^1.1.0",
 		"gulp-webp-html": "^1.0.2",
-		"html-loader": "^5.0.0",
 		"imagemin": "^8.0.1",
-		"imagemin-jpeg-recompress": "^7.1.0",
-		"imagemin-pngquant": "^9.0.2",
 		"js-loader": "^0.1.1",
 		"jsx-loader": "^0.13.2",
-		"parallax-js": "^3.1.0",
-		"prettier": "^3.2.5",
-		"raw-loader": "^4.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-image-webp": "^0.8.0",
 		"react-scroll": "^1.9.0",
-		"rellax": "^1.12.1",
 		"require-dir": "^1.2.0",
-		"sass": "^1.72.0",
-		"sass-loader": "^14.1.1",
-		"scrollmagic": "^2.0.8",
-		"smooth-scroll": "^16.1.3",
-		"style-loader": "^3.3.4",
-		"swiper": "^11.0.6",
+		"sass": "^1.76.0",
+		"sass-loader": "^14.2.1",
+		"style-loader": "^4.0.0",
 		"terser-webpack-plugin": "^5.3.10",
 		"webpack": "^5.91.0",
 		"webpack-stream": "^7.0.0"
 	},
 	"dependencies": {
 		"animejs": "^3.2.2",
-		"D": "^1.0.0",
 		"del": "^6.1.1",
 		"gsap": "^3.12.5",
-		"gulp-cli": "^2.3.0",
-		"postcss": "^8.4.35"
+		"gulp-cli": "^3.0.0",
+		"parallax-js": "^3.1.0",
+		"postcss": "^8.4.35",
+		"rellax": "^1.12.1",
+		"swiper": "^11.1.1"
 	}
 }
