--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"@sentry/react": "^7.113.0",
 		"@sentry/tracing": "^7.113.0",
 		"@types/jest": "^29.5.12",
+		"@types/react": "^18.3.1",
+		"@types/react-dom": "^18.3.0",
 		"babel-loader": "^9.1.3",
 		"babel-preset-react-app": "^10.0.1",
 		"browser-sync": "^3.0.2",
