--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-image-webp": "^0.8.0",
+		"react-router-dom": "^6.23.0",
+		"react-router-hash-link": "^2.4.3",
 		"react-scroll": "^1.9.0",
 		"require-dir": "^1.2.0",
 		"sass": "^1.76.0",
